[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Connectivity_Agent"
version = "0.1.0"
description = "An AI-based connectivity diagnostic and agent framework."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kevin Brown" }
]

dependencies = [
    "openai>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/brocla/connectivity_agent"
Repository = "https://github.com/brocla/connectivity_agent"

[project.scripts]
connectivity-agent = "connectivity_agent.main:main"
